# minicord

./: .gitignore  README.md  pyproject.toml
src/minicord/: __init__.py  client.py  gateway.py
tests/: test_smoke.py
